--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "Swaraj Kaushik",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1613.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
